tests/specs/no_ambient_in_module.txt
# mod.ts
declare function foo(): number;
export function bar() {};

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:1
  | 
2 | export function bar() {};
  | ^

# output.txt
Defined in file:///mod.ts:2:1

function bar(): void


# output.json
[
  {
    "kind": "function",
    "name": "bar",
    "location": {
      "filename": "file:///mod.ts",
      "line": 2,
      "col": 0,
      "byteIndex": 32
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [],
      "returnType": {
        "repr": "void",
        "kind": "keyword",
        "keyword": "void"
      },
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
